--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -30,7 +30,7 @@ env:
 jobs:
   build:
     name: build and push
-    runs-on: depot-ubuntu-22.04-16
+    runs-on: depot-ubuntu-latest
     permissions:
       contents: read
       id-token: write
