--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -25,7 +25,7 @@ env:
 
   # Keep in sync with `release.yml`.
   RUST_PROFILE: maxperf
-  RUST_FEATURES: aws-kms,gcp-kms,cli,asm-keccak,js-tracer
+  RUST_FEATURES: aws-kms,gcp-kms,turnkey,cli,asm-keccak,js-tracer
 
 jobs:
   build:
