fix(forge): preprocess mockes declared in same test file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -446,7 +446,7 @@ rexpect = { git = "https://github.com/rust-cli/rexpect", rev = "2ed0b1898d7edaf6
 
 ## foundry
 # foundry-block-explorers = { git = "https://github.com/foundry-rs/block-explorers.git", rev = "f5b46b2" }
-# foundry-compilers = { git = "https://github.com/foundry-rs/compilers.git", branch = "main" }
+foundry-compilers = { git = "https://github.com/foundry-rs/compilers.git", rev = "1d5872a" }
 # foundry-fork-db = { git = "https://github.com/foundry-rs/foundry-fork-db", rev = "be95912" }
 
 # solar
