feat: browser wallet (#12302)
* start drafting

* establish very basic flow

* nits

* clean up api

* create basic test suite

* make timeout configurable, improve types, extend tests

* fix test

* clean up

* add transaction accept test

* clean up tests

* add basic setup test

* solidify api

* simplify and harden api

* tweaks

* move tests

* expand test suite

* clean up

* nit

* add basic session token

* apply session token, fix tests by adding session token to reqwest

* fix test

* fix reqwest openssl issue, use workspace version

* harden CSP, inject session token into JS, define 0 cache policy

* remove flawed session token for now, to implement actual /session route & cookie token

* port interface

* replace with v0.0.0 release of foundry-browser-wallet

* host interface

* ignore build files from typos

* update

* fix CSP to allow for RPC calls

* update wallet v0.0.0

* nits

* add development mode to relax certain security restrictions such as origin check, enforce injected session token protected by strict CSP in production

* update browser wallet v0.0.0, includes session token support

* add notice

* add signing flow

* restructure sign message

* serialize camelcase

* bump version

* prefer fields

* prefer non-blocking async api

* remove unintended bump of proptest

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -285,13 +285,14 @@ op-alloy-consensus = "0.22.0"
 op-alloy-rpc-types = "0.22.0"
 op-alloy-flz = "0.13.1"
 
-## revm
+## alloy-evm
+alloy-evm = "0.23.2"
+alloy-op-evm = "0.23.2"
+
+# revm
 revm = { version = "31.0.0", default-features = false }
 revm-inspectors = { version = "0.32.0", features = ["serde"] }
 op-revm = { version = "12.0.0", default-features = false }
-## alloy-evm
-alloy-evm = "0.23.1"
-alloy-op-evm = "0.23.1"
 
 ## cli
 anstream = "0.6"
