--- a/testdata/foundry.toml
+++ b/testdata/foundry.toml
@@ -57,4 +57,5 @@ polygon = "${RPC_POLYGON}"
 bsc = "${RPC_BSC}"
 avaxTestnet = "https://api.avax-test.network/ext/bc/C/rpc"
 moonbeam = "https://moonbeam-rpc.publicnode.com"
+polkadotTestnet = "https://services.polkadothub-rpc.com/testnet"
 rpcEnvAlias = "${RPC_ENV_ALIAS}"
