--- a/Cargo.toml
+++ b/Cargo.toml
@@ -290,9 +290,9 @@ alloy-evm = "0.23.2"
 alloy-op-evm = "0.23.2"
 
 # revm
-revm = { version = "31.0.0", default-features = false }
+revm = { version = "33.0.0", default-features = false }
 revm-inspectors = { version = "0.32.0", features = ["serde"] }
-op-revm = { version = "12.0.0", default-features = false }
+op-revm = { version = "14.0.0", default-features = false }
 
 ## cli
 anstream = "0.6"
@@ -437,18 +437,18 @@ rexpect = { git = "https://github.com/rust-cli/rexpect", rev = "2ed0b1898d7edaf6
 # alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
 
 ## alloy-evm
-# alloy-evm = { git = "https://github.com/alloy-rs/evm.git", rev = "085ad53" }
-# alloy-op-evm = { git = "https://github.com/alloy-rs/evm.git", rev = "085ad53" }
+alloy-evm = { git = "https://github.com/alloy-rs/evm.git", rev = "237d0a0" }
+alloy-op-evm = { git = "https://github.com/alloy-rs/evm.git", rev = "237d0a0" }
 
 ## revm
 # revm = { git = "https://github.com/bluealloy/revm.git", rev = "d9cda3a" }
 # op-revm = { git = "https://github.com/bluealloy/revm.git", rev = "d9cda3a" }
-# revm-inspectors = { git = "https://github.com/zerosnacks/revm-inspectors.git", rev = "340d37e" }
+revm-inspectors = { git = "https://github.com/zerosnacks/revm-inspectors.git", rev = "0aaab71" }
 
 ## foundry
 # foundry-block-explorers = { git = "https://github.com/foundry-rs/block-explorers.git", rev = "f5b46b2" }
 # foundry-compilers = { git = "https://github.com/foundry-rs/compilers.git", branch = "main" }
-# foundry-fork-db = { git = "https://github.com/foundry-rs/foundry-fork-db", rev = "be95912" }
+foundry-fork-db = { git = "https://github.com/foundry-rs/foundry-fork-db", rev = "b4299fc" }
 
 # solar
 solar = { package = "solar-compiler", git = "https://github.com/paradigmxyz/solar.git", rev = "0bea5f0" }
