Add support for using external RPCs for execution and tracing instead of local revm fork

--- a/.devcontainer/Dockerfile.dev
+++ b/.devcontainer/Dockerfile.dev
@@ -3,7 +3,6 @@ FROM ubuntu:22.04
 ARG USERNAME=foundry
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
-ARG PYTHON_VERSION=3.14
 ARG NODE_MAJOR=20
 ARG VYPER_VERSION=0.4.3
 
@@ -28,10 +27,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     git \
     sudo \
     unzip \
-    # Python
-    python${PYTHON_VERSION} \
+    # Python (use Ubuntu default 3.x)
+    python3 \
     python3-pip \
-    python${PYTHON_VERSION}-venv \
+    python3-venv \
     # Add Node.js repo
     && mkdir -p /etc/apt/keyrings \
     && curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg \
@@ -42,9 +41,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     # Clean up apt cache
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Ensure python points to the installed python version
-RUN ln -sf /usr/bin/python${PYTHON_VERSION} /usr/bin/python && \
-    ln -sf /usr/bin/python${PYTHON_VERSION} /usr/bin/python3
+# Ensure `python` points to python3 for tools expecting `python`
+RUN ln -sf /usr/bin/python3 /usr/bin/python
 
 # Create non-root user with sudo privileges
 RUN groupadd --gid $USER_GID $USERNAME \
