feat(anvil): extend Content-Type support on Beacon API
- Support "application/octet-stream" and "application/json" content types
- Implemented `must_be_ssz` helper to determine if the Accept header prefers SSZ encoding.
- Updated `handle_get_blobs` to return SSZ-encoded blobs when requested.
- Enhanced tests to verify both JSON and SSZ responses for blob sidecars.
- Added accept header assertions in tests to ensure correct content type selection.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -382,6 +382,7 @@ jiff = { version = "0.2", default-features = false, features = [
 heck = "0.5"
 uuid = "1.18.1"
 flate2 = "1.1"
+ethereum_ssz = "0.10"
 
 ## Pinned dependencies. Enabled for the workspace in crates/test-utils.
 
