--- a/crates/anvil/Cargo.toml
+++ b/crates/anvil/Cargo.toml
@@ -95,6 +95,7 @@ tempfile.workspace = true
 itertools.workspace = true
 rand_08.workspace = true
 eyre.workspace = true
+ethereum_ssz.workspace = true
 
 # cli
 clap = { version = "4", features = [
