chore(anvil): use `FillTransaction` from alloy
- Bumped alloy to 1.1.2
- Added alloy-rpc-types-eth dep
- Removed `FillTransactionResult` from alloy-core crate

--- a/crates/anvil/Cargo.toml
+++ b/crates/anvil/Cargo.toml
@@ -45,6 +45,7 @@ alloy-sol-types = { workspace = true, features = ["std"] }
 alloy-dyn-abi = { workspace = true, features = ["std", "eip712"] }
 alloy-rpc-types = { workspace = true, features = ["anvil", "trace", "txpool"] }
 alloy-rpc-types-beacon.workspace = true
+alloy-rpc-types-eth.workspace = true
 alloy-serde.workspace = true
 alloy-provider = { workspace = true, features = [
     "reqwest",
