--- a/crates/primitives/Cargo.toml
+++ b/crates/primitives/Cargo.toml
@@ -18,9 +18,12 @@ alloy-network.workspace = true
 alloy-primitives.workspace = true
 alloy-rlp.workspace = true
 alloy-rpc-types.workspace = true
+alloy-rpc-types-eth.workspace = true
 alloy-serde.workspace = true
 alloy-evm = { workspace = true, features = ["op"] }
 op-alloy-consensus = { workspace = true, features = ["serde"] }
+op-alloy-rpc-types.workspace = true
 op-revm.workspace = true
 revm.workspace = true
 serde_json.workspace = true
+serde = { version = "1.0", features = ["derive"] }
