--- a/crates/cast/Cargo.toml
+++ b/crates/cast/Cargo.toml
@@ -45,6 +45,7 @@ alloy-provider = { workspace = true, features = [
     "ipc",
     "trace-api",
     "txpool-api",
+    "debug-api"
 ] }
 alloy-rlp.workspace = true
 alloy-rpc-types = { workspace = true, features = ["eth", "trace"] }
