--- a/crates/primitives/Cargo.toml
+++ b/crates/primitives/Cargo.toml
@@ -21,9 +21,10 @@ alloy-rpc-types.workspace = true
 alloy-rpc-types-eth.workspace = true
 alloy-serde.workspace = true
 alloy-evm = { workspace = true, features = ["op"] }
-op-alloy-consensus = { workspace = true, features = ["serde"] }
+op-alloy-consensus = { workspace = true, features = ["serde", "alloy-compat"] }
 op-alloy-rpc-types.workspace = true
 op-revm.workspace = true
 revm.workspace = true
 serde_json.workspace = true
 serde = { version = "1.0", features = ["derive"] }
+derive_more.workspace = true
