--- a/crates/primitives/Cargo.toml
+++ b/crates/primitives/Cargo.toml
@@ -17,7 +17,7 @@ alloy-consensus.workspace = true
 alloy-network.workspace = true
 alloy-primitives.workspace = true
 alloy-rlp.workspace = true
-alloy-rpc-types.workspace = true
+alloy-rpc-types = { workspace = true, features = ["trace"] }
 alloy-rpc-types-eth.workspace = true
 alloy-serde.workspace = true
 alloy-evm = { workspace = true, features = ["op"] }
