feat: verify contracts in paralel, show progress bar - take 1

--- a/crates/verify/Cargo.toml
+++ b/crates/verify/Cargo.toml
@@ -35,6 +35,8 @@ revm.workspace = true
 clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
 reqwest = { workspace = true, features = ["json"] }
 async-trait.workspace = true
+indicatif.workspace = true
+parking_lot.workspace = true
 futures.workspace = true
 semver.workspace = true
 regex = { workspace = true, default-features = false }
