switch to unit-prefix

--- a/crates/config/Cargo.toml
+++ b/crates/config/Cargo.toml
@@ -35,7 +35,7 @@ globset = "0.4"
 heck.workspace = true
 itertools.workspace = true
 mesc.workspace = true
-number_prefix = "0.4"
+unit-prefix = "0.5.2"
 rayon.workspace = true
 regex.workspace = true
 reqwest.workspace = true
