--- a/Cargo.toml
+++ b/Cargo.toml
@@ -291,11 +291,13 @@ op-alloy-flz = "0.13.1"
 ## alloy-evm
 alloy-evm = "0.25.1"
 alloy-op-evm = "0.25.1"
+alloy-monad-evm = { git = "https://github.com/haythemsellami/evm", branch = "monad-evm" }
 
 # revm
 revm = { version = "33.1.0", default-features = false }
 revm-inspectors = { version = "0.33.0", features = ["serde"] }
 op-revm = { version = "14.1.0", default-features = false }
+monad-revm = { git = "https://github.com/haythemsellami/revm", branch = "monad-revm" }
 
 ## cli
 anstream = "0.6"
@@ -440,12 +442,14 @@ rexpect = { git = "https://github.com/rust-cli/rexpect", rev = "2ed0b1898d7edaf6
 # alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
 
 ## alloy-evm
-# alloy-evm = { git = "https://github.com/alloy-rs/evm.git", rev = "237d0a0" }
-# alloy-op-evm = { git = "https://github.com/alloy-rs/evm.git", rev = "237d0a0" }
+alloy-evm = { git = "https://github.com/haythemsellami/evm", branch = "monad-evm" }
+alloy-op-evm = { git = "https://github.com/haythemsellami/evm", branch = "monad-evm" }
+alloy-monad-evm = { git = "https://github.com/haythemsellami/evm", branch = "monad-evm" }
 
 ## revm
-# revm = { git = "https://github.com/bluealloy/revm.git", rev = "7e59936" }
-# op-revm = { git = "https://github.com/bluealloy/revm.git", rev = "7e59936" }
+revm = { git = "https://github.com/haythemsellami/revm", branch = "monad-revm" }
+op-revm = { git = "https://github.com/haythemsellami/revm", branch = "monad-revm" }
+monad-revm = { git = "https://github.com/haythemsellami/revm", branch = "monad-revm" }
 # revm-inspectors = { git = "https://github.com/zerosnacks/revm-inspectors.git", rev = "0aaab71" }
 
 ## foundry
