--- a/crates/evm/core/Cargo.toml
+++ b/crates/evm/core/Cargo.toml
@@ -20,6 +20,7 @@ foundry-config.workspace = true
 foundry-evm-abi.workspace = true
 foundry-evm-networks.workspace = true
 
+alloy-monad-evm.workspace = true
 alloy-chains.workspace = true
 alloy-dyn-abi = { workspace = true, features = ["arbitrary", "eip712"] }
 alloy-evm.workspace = true
@@ -53,6 +54,7 @@ revm = { workspace = true, features = [
 ] }
 revm-inspectors.workspace = true
 op-revm.workspace = true
+monad-revm.workspace = true
 alloy-op-evm.workspace = true
 
 auto_impl.workspace = true
