--- a/crates/cheatcodes/Cargo.toml
+++ b/crates/cheatcodes/Cargo.toml
@@ -57,7 +57,7 @@ memchr.workspace = true
 p256 = "0.13"
 ecdsa = "0.16"
 rand.workspace = true
-revm.workspace = true
+revm = { workspace = true, features = ["optional_fee_charge"] }
 revm-inspectors.workspace = true
 semver.workspace = true
 serde_json.workspace = true
