--- a/crates/forge/Cargo.toml
+++ b/crates/forge/Cargo.toml
@@ -63,7 +63,7 @@ alloy-serde.workspace = true
 alloy-signer.workspace = true
 alloy-transport.workspace = true
 
-revm.workspace = true
+revm = { workspace = true, features = ["optional_fee_charge"] }
 
 clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
 clap_complete.workspace = true
