--- a/.github/ISSUE_TEMPLATE/FEATURE-FORM.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE-FORM.yml
@@ -1,34 +1,35 @@
 name: Feature request
 description: Suggest a feature
+type: Feature
 labels: ["T-feature", "T-needs-triage"]
 body:
-    - type: markdown
-      attributes:
-          value: |
-              Please ensure that the feature has not already been requested in the issue tracker.
+  - type: markdown
+    attributes:
+      value: |
+        Please ensure that the feature has not already been requested in the issue tracker.
 
-              Thanks for helping us improve Foundry!
-    - type: dropdown
-      attributes:
-          label: Component
-          description: What component is the feature for?
-          multiple: true
-          options:
-              - Forge
-              - Cast
-              - Anvil
-              - Foundryup
-              - Chisel
-              - Other (please describe)
-      validations:
-          required: true
-    - type: textarea
-      attributes:
-          label: Describe the feature you would like
-          description: Please also describe what the feature is aiming to solve, if relevant.
-      validations:
-          required: true
-    - type: textarea
-      attributes:
-          label: Additional context
-          description: Add any other context to the feature (like screenshots, resources)
+        Thanks for helping us improve Foundry!
+  - type: dropdown
+    attributes:
+      label: Component
+      description: What component is the feature for?
+      multiple: true
+      options:
+        - Forge
+        - Cast
+        - Anvil
+        - Foundryup
+        - Chisel
+        - Other (please describe)
+    validations:
+      required: true
+  - type: textarea
+    attributes:
+      label: Describe the feature you would like
+      description: Please also describe what the feature is aiming to solve, if relevant.
+    validations:
+      required: true
+  - type: textarea
+    attributes:
+      label: Additional context
+      description: Add any other context to the feature (like screenshots, resources)
