--- a/crates/primitives/Cargo.toml
+++ b/crates/primitives/Cargo.toml
@@ -28,3 +28,4 @@ revm.workspace = true
 serde_json.workspace = true
 serde = { version = "1.0", features = ["derive"] }
 derive_more.workspace = true
+tempo-primitives.workspace = true
