fix(ci): disable sccache for rustfmt job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,6 +107,8 @@ jobs:
           toolchain: nightly
           components: rustfmt
       - run: cargo fmt --all --check
+        env:
+          RUSTC_WRAPPER: ""
 
   forge-fmt:
     runs-on: depot-ubuntu-latest
