--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,6 +128,8 @@ jobs:
       - name: forge fmt
         shell: bash
         run: ./.github/scripts/format.sh --check
+        env:
+          RUSTC_WRAPPER: ""
 
   crate-checks:
     runs-on: depot-ubuntu-latest
