--- a/deny.toml
+++ b/deny.toml
@@ -103,4 +103,8 @@ allow-git = [
     "https://github.com/bluealloy/revm",
     # Only for tests.
     "https://github.com/rust-cli/rexpect",
+    # Tempo
+    "https://github.com/tempoxyz/tempo",
+    # Transitive dependency of Tempo
+    "https://github.com/paradigmxyz/reth",
 ]
