feat(primitives): tempo transaction support (#12859)
* feat(primitives): tempo transaction support

* fix(primitives): use RecoveryError instead of SignatureError in FoundryTxEnvelope::recover

* fix(primitives): stub out Tempo variant in FoundryTransactionRequest

* feat(primitives): add Tempo transaction and receipt tests

Add tests for Tempo (type 0x76) transaction encoding/decoding and receipt
handling in foundry-primitives.

Transaction tests (envelope.rs):
- test_decode_encode_tempo_tx: Uses real testnet transaction with WebAuthn
  signature, verifies decode, field values, hash, round-trip encoding, and
  sender recovery
- test_tempo_tx_type: Verifies FoundryTxType::Tempo properties

Receipt tests (receipt.rs):
- encode_tempo_receipt: Tests encoding with logs, round-trip decode
- decode_tempo_receipt: Tests 2718 encode/decode
- tempo_receipt_from_parts: Tests FoundryReceiptEnvelope::from_parts
- tempo_receipt_map_logs: Tests map_logs transformation

Test vector from Tempo testnet:
https://explorer.testnet.tempo.xyz/tx/0x6d6d8c102064e6dee44abad2024a8b1d37959230baab80e70efbf9b0c739c4fd

b

* chore: fmt

* fix: make it compile

* chore: cargo deny

* chore: clippy

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -387,6 +387,9 @@ uuid = "1.19.0"
 flate2 = "1.1"
 ethereum_ssz = "0.10"
 
+# Tempo
+tempo-primitives = { git = "https://github.com/tempoxyz/tempo", tag = "v0.7.5" }
+
 ## Pinned dependencies. Enabled for the workspace in crates/test-utils.
 
 # testing
