--- a/crates/cheatcodes/Cargo.toml
+++ b/crates/cheatcodes/Cargo.toml
@@ -17,7 +17,7 @@ workspace = true
 [build-dependencies]
 
 [dependencies]
-assertion-executor = { git = "https://github.com/phylaxsystems/credible-sdk.git", branch = "mateo/update-revm", features = [
+assertion-executor = { git = "https://github.com/phylaxsystems/credible-sdk.git", tag = "0.9.0", features = [
     "phoundry",
 ] }
 foundry-fork-db.workspace = true
