Add reqwest dependency with json feature

--- a/crates/forge/Cargo.toml
+++ b/crates/forge/Cargo.toml
@@ -87,6 +87,7 @@ watchexec-signals = "5.0"
 clearscreen = "4.0"
 evm-disassembler.workspace = true
 path-slash.workspace = true
+reqwest = { workspace = true, features = ["json"] }
 
 # doc server
 axum = { workspace = true, features = ["ws"] }
