fix(anvil): add cancellation to blocking RPC tasks

--- a/crates/anvil/Cargo.toml
+++ b/crates/anvil/Cargo.toml
@@ -81,6 +81,7 @@ tracing-subscriber = { workspace = true, features = ["env-filter"] }
 
 # async
 tokio = { workspace = true, features = ["time"] }
+tokio-util.workspace = true
 parking_lot.workspace = true
 futures.workspace = true
 async-trait.workspace = true
