--- a/Cargo.toml
+++ b/Cargo.toml
@@ -372,6 +372,7 @@ soldeer-core = { version = "=0.10.0", features = ["serde"] }
 strum = "0.27"
 tempfile = "3.23"
 tokio = "1"
+tokio-util = "0.7"
 toml = "0.9"
 toml_edit = "0.24"
 tower = "0.5"
