--- a/crates/wallets/Cargo.toml
+++ b/crates/wallets/Cargo.toml
@@ -14,6 +14,7 @@ workspace = true
 
 [dependencies]
 foundry-config.workspace = true
+foundry-primitives.workspace = true
 
 alloy-primitives.workspace = true
 alloy-signer = { workspace = true, features = ["eip712"] }
@@ -24,6 +25,8 @@ alloy-network.workspace = true
 alloy-consensus.workspace = true
 alloy-sol-types.workspace = true
 alloy-dyn-abi.workspace = true
+
+tempo-primitives.workspace = true
 
 # browser wallet
 alloy-rpc-types.workspace = true
