--- a/Cargo.toml
+++ b/Cargo.toml
@@ -392,7 +392,7 @@ flate2 = "1.1"
 ethereum_ssz = "0.10"
 
 # Tempo
-tempo-primitives = { git = "https://github.com/tempoxyz/tempo", tag = "v0.7.5" }
+tempo-primitives = { git = "https://github.com/tempoxyz/tempo", tag = "v0.7.5", default-features = false }
 
 ## Pinned dependencies. Enabled for the workspace in crates/test-utils.
 
