monad integrstion with foundry toolchain: forge, verify, chisel, cast

--- a/crates/config/Cargo.toml
+++ b/crates/config/Cargo.toml
@@ -23,6 +23,7 @@ alloy-primitives = { workspace = true, features = ["serde"] }
 foundry-evm-networks.workspace = true
 
 revm.workspace = true
+monad-revm.workspace = true
 
 solar.workspace = true
 
