--- a/crates/verify/Cargo.toml
+++ b/crates/verify/Cargo.toml
@@ -31,6 +31,7 @@ tracing.workspace = true
 foundry-compilers.workspace = true
 foundry-block-explorers = { workspace = true, features = ["foundry-compilers"] }
 revm.workspace = true
+monad-revm.workspace = true
 
 clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
 reqwest = { workspace = true, features = ["json"] }
