--- a/crates/cheatcodes/Cargo.toml
+++ b/crates/cheatcodes/Cargo.toml
@@ -59,6 +59,7 @@ ecdsa = "0.16"
 rand.workspace = true
 revm.workspace = true
 revm-inspectors.workspace = true
+monad-revm.workspace = true
 semver.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
