--- a/crates/script/Cargo.toml
+++ b/crates/script/Cargo.toml
@@ -40,6 +40,7 @@ itertools.workspace = true
 parking_lot.workspace = true
 yansi.workspace = true
 revm-inspectors.workspace = true
+monad-revm.workspace = true
 alloy-rpc-types.workspace = true
 alloy-json-abi.workspace = true
 dialoguer.workspace = true
