--- a/Cargo.toml
+++ b/Cargo.toml
@@ -242,47 +242,47 @@ svm = { package = "svm-rs", version = "0.5", default-features = false, features 
 ] }
 
 ## alloy
-alloy-consensus = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-contract = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-eips = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-eip5792 = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-ens = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-genesis = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-json-rpc = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-network = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-provider = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-pubsub = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-rpc-client = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-rpc-types = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = true }
-alloy-rpc-types-beacon = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = true }
-alloy-rpc-types-eth = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-serde = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-signer = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-signer-aws = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-signer-gcp = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-signer-ledger = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-signer-local = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-signer-trezor = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-signer-turnkey = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-transport = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-transport-http = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-transport-ipc = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
-alloy-transport-ws = { git= "https://github.com/lean-apple/alloy", branch = "update-trezor", default-features = false }
+alloy-consensus = { version = "1.3", default-features = false }
+alloy-contract = { version = "1.3", default-features = false }
+alloy-eips = { version = "1.3", default-features = false }
+alloy-eip5792 = { version = "1.3", default-features = false }
+alloy-ens = { version = "1.3", default-features = false }
+alloy-genesis = { version = "1.3", default-features = false }
+alloy-json-rpc = { version = "1.3", default-features = false }
+alloy-network = { version = "1.3", default-features = false }
+alloy-provider = { version = "1.3", default-features = false }
+alloy-pubsub = { version = "1.3", default-features = false }
+alloy-rpc-client = { version = "1.3", default-features = false }
+alloy-rpc-types = { version = "1.3", default-features = true }
+alloy-rpc-types-beacon = { version = "1.3", default-features = true }
+alloy-rpc-types-eth = { version = "1.3", default-features = false }
+alloy-serde = { version = "1.3", default-features = false }
+alloy-signer = { version = "1.3", default-features = false }
+alloy-signer-aws = { version = "1.3", default-features = false }
+alloy-signer-gcp = { version = "1.3", default-features = false }
+alloy-signer-ledger = { version = "1.3", default-features = false }
+alloy-signer-local = { version = "1.3", default-features = false }
+alloy-signer-trezor = { version = "1.3", default-features = false }
+alloy-signer-turnkey = { version = "1.3", default-features = false }
+alloy-transport = { version = "1.3", default-features = false }
+alloy-transport-http = { version = "1.3", default-features = false }
+alloy-transport-ipc = { version = "1.3", default-features = false }
+alloy-transport-ws = { version = "1.3", default-features = false }
 alloy-hardforks = { version = "0.4.7", default-features = false }
 alloy-op-hardforks = { version = "0.4.7", default-features = false }
 
 ## alloy-core
-alloy-dyn-abi = "1.5.1"
-alloy-json-abi = "1.5.1"
-alloy-primitives = { version = "1.5.1", features = [
+alloy-dyn-abi = "1.5.2"
+alloy-json-abi = "1.5.2"
+alloy-primitives = { version = "1.5.2", features = [
     "getrandom",
     "rand",
     "map-fxhash",
     "map-foldhash",
 ] }
-alloy-sol-macro-expander = "1.5.1"
-alloy-sol-macro-input = "1.5.1"
-alloy-sol-types = "1.5.1"
+alloy-sol-macro-expander = "1.5.2"
+alloy-sol-macro-input = "1.5.2"
+alloy-sol-types = "1.5.2"
 
 alloy-chains = "0.2"
 alloy-rlp = "0.3"
