chore(forge-doc): update mdbook to 0.5.2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -187,7 +187,7 @@ figment.opt-level = "z"
 foundry-compilers-artifacts-solc.opt-level = "z"
 foundry-config.opt-level = "z"
 html5ever.opt-level = "z"
-mdbook.opt-level = "z"
+mdbook-driver.opt-level = "z"
 prettyplease.opt-level = "z"
 protobuf.opt-level = "z"
 pulldown-cmark.opt-level = "z"
