--- a/crates/doc/Cargo.toml
+++ b/crates/doc/Cargo.toml
@@ -25,7 +25,7 @@ alloy-primitives.workspace = true
 derive_more.workspace = true
 eyre.workspace = true
 itertools.workspace = true
-mdbook = { version = "0.4", default-features = false, features = ["search"] }
+mdbook-driver = { version = "0.5", default-features = false, features = ["search"] }
 rayon.workspace = true
 serde_json.workspace = true
 serde.workspace = true
