feat(forge): parallel mutation testing with isolated workspaces
Implements parallel mutation testing for Foundry, building on PR #11996.

Key features:
- Parallel execution via rayon thread pool with configurable --mutation-jobs
- Isolated TempDir workspaces per mutant for safe concurrent execution
- Adaptive span skipping shared across workers (skip mutations in spans
  where a mutation already survived)
- Fail-fast per mutant (stops on first test failure)
- Symlinks for lib directories to avoid expensive copies
- Preserves project layout (custom src/test/libs paths supported)

Safety improvements:
- Path traversal protection (rejects .. components)
- catch_unwind prevents single panic from aborting entire run
- Symlinked directories skipped in copy to prevent traversal attacks
- 16MB stack size for rayon threads to avoid overflow

Performance: 2.5x speedup observed with 4 workers on 150 mutants

Closes #478

--- a/crates/forge/Cargo.toml
+++ b/crates/forge/Cargo.toml
@@ -95,6 +95,7 @@ opener = "0.8"
 # soldeer
 soldeer-commands.workspace = true
 quick-junit = "0.5.1"
+tempfile.workspace = true
 
 [dev-dependencies]
 alloy-hardforks.workspace = true
