perf: add dist profile for smaller release binaries
Add a new 'dist' Cargo profile optimized for distribution:
- Fat LTO and codegen-units=1 for better optimization
- Strip symbols for smaller binaries
- opt-level="s" overrides for non-perf-critical dependencies

Benchmarks on Solady test suite show dist is 8% faster than release
while being 45% smaller (43MB vs 78MB).

Update release workflows to use the dist profile instead of maxperf.

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,7 +24,7 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
   # Keep in sync with `release.yml`.
-  RUST_PROFILE: maxperf
+  RUST_PROFILE: dist
   RUST_FEATURES: aws-kms,gcp-kms,turnkey,cli,asm-keccak,js-tracer
 
 jobs:
