--- a/Cargo.toml
+++ b/Cargo.toml
@@ -386,7 +386,7 @@ dunce = "1"
 evm-disassembler = "0.6"
 evmole = "0.8"
 eyre = "0.6"
-figment2 = "0.11"
+figment = { package = "figment2", version = "0.11" }
 futures = { version = "0.3", default-features = false }
 hyper = "1.8"
 indicatif = "0.18"
