--- a/Cargo.toml
+++ b/Cargo.toml
@@ -274,7 +274,7 @@ foundry-primitives = { path = "crates/primitives" }
 
 # solc & compilation utilities
 foundry-block-explorers = { version = "0.22.0", default-features = false }
-foundry-compilers = { version = "0.19.10", default-features = false, features = [
+foundry-compilers = { version = "0.19.12", default-features = false, features = [
     "rustls",
     "svm-solc",
 ] }
@@ -436,7 +436,9 @@ flate2 = "1.1"
 ethereum_ssz = "0.10"
 
 # Tempo
-tempo-primitives = { git = "https://github.com/tempoxyz/tempo", tag = "v0.7.5", default-features = false, features = ["serde"] }
+tempo-primitives = { git = "https://github.com/tempoxyz/tempo", tag = "v0.7.5", default-features = false, features = [
+    "serde",
+] }
 
 ## Pinned dependencies. Enabled for the workspace in crates/test-utils.
 
@@ -501,7 +503,7 @@ rexpect = { git = "https://github.com/rust-cli/rexpect", rev = "2ed0b1898d7edaf6
 
 ## foundry
 # foundry-block-explorers = { git = "https://github.com/foundry-rs/block-explorers.git", rev = "f5b46b2" }
-# foundry-compilers = { git = "https://github.com/foundry-rs/compilers.git", branch = "main" }
+# foundry-compilers = { path = "../compilers/crates/compilers" }
 # foundry-fork-db = { git = "https://github.com/foundry-rs/foundry-fork-db", rev = "b4299fc" }
 
 # solar
