ci: use separate issue templates for isolation vs flaky failures

--- a/.github/workflows/test-isolate.yml
+++ b/.github/workflows/test-isolate.yml
@@ -53,11 +53,11 @@ jobs:
           ETHERSCAN_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
         run: cargo nextest run --profile flaky --features=isolate-by-default --no-fail-fast
 
-  # If any of the jobs fail, this will create a high-priority issue to signal so.
-  issue:
-    name: Open an issue
+  # If nextest fails, create a high-priority issue for isolation failures.
+  issue-isolate:
+    name: Open isolation issue
     runs-on: ubuntu-latest
-    needs: [nextest, flaky]
+    needs: [nextest]
     if: failure()
     permissions:
       contents: read
@@ -74,3 +74,25 @@ jobs:
         with:
           update_existing: true
           filename: .github/TEST_ISOLATE_FAILURE_TEMPLATE.md
+
+  # If flaky tests fail, create a normal-priority issue for flaky failures.
+  issue-flaky:
+    name: Open flaky issue
+    runs-on: ubuntu-latest
+    needs: [flaky]
+    if: failure()
+    permissions:
+      contents: read
+      issues: write
+    steps:
+      - uses: actions/checkout@v6
+        with:
+          persist-credentials: false
+      - uses: JasonEtco/create-an-issue@1b14a70e4d8dc185e5cc76d3bec9eab20257b2c5 # v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WORKFLOW_URL: |
+            ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+        with:
+          update_existing: true
+          filename: .github/FLAKY_TEST_FAILURE_TEMPLATE.md
